[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "cookies"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7.1"
url = "2.3.1"
clap = { version = "4.1.6", features = ["derive"] }
